# doodle

./: .env  Dockerfile  README.md  app.py  deployment.yaml  docker-compose.yml  doodle.sql  init.sql  pyproject.toml  requirements.txt
static/css/: style.css
templates/: index.jinja  layout.jinja  login.jinja  rdv.jinja  rdv_pris.jinja  validation_prendrerdv_form.jinja  validelogin.jinja
