[tool.poetry]
name = "doodle"
version = "0.1.0"
description = ""
authors = ["Gasteau Louca <lgasteau@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
pony = "^0.7.17"
pymysql = "^1.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
